include/El/blas_like/level1.h

/* DiagonalScale 
   ============= */
EL_EXPORT ElError ElDiagonalScale_i
( ElLeftOrRight side, 
  ElConstMatrix_i d, ElMatrix_i X );
EL_EXPORT ElError ElDiagonalScale_s
( ElLeftOrRight side,
  ElConstMatrix_s d, ElMatrix_s X );
EL_EXPORT ElError ElDiagonalScale_d
( ElLeftOrRight side, 
  ElConstMatrix_d d, ElMatrix_d X );
EL_EXPORT ElError ElDiagonalScale_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElMatrix_c X );
EL_EXPORT ElError ElDiagonalScale_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleDist_i
( ElLeftOrRight side, 
  ElConstDistMatrix_i d, ElDistMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleDist_s
( ElLeftOrRight side, 
  ElConstDistMatrix_s d, ElDistMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleDist_d
( ElLeftOrRight side,
  ElConstDistMatrix_d d, ElDistMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleDist_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_c d, ElDistMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleDist_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_z d, ElDistMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleSparse_i
( ElLeftOrRight side, 
  ElConstMatrix_i d, ElSparseMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleSparse_s
( ElLeftOrRight side, 
  ElConstMatrix_s d, ElSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleSparse_d
( ElLeftOrRight side,
  ElConstMatrix_d d, ElSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElSparseMatrix_z X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_i
( ElLeftOrRight side, 
  ElConstDistMultiVec_i d, ElDistSparseMatrix_i X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_s
( ElLeftOrRight side, 
  ElConstDistMultiVec_s d, ElDistSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_d
( ElLeftOrRight side,
  ElConstDistMultiVec_d d, ElDistSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_c d, ElDistSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalScaleDistSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_z d, ElDistSparseMatrix_z X );
/* DiagonalScaleTrapezoid
   ====================== */
EL_EXPORT ElError ElDiagonalScaleTrapezoid_i
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstMatrix_i d, ElMatrix_i X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoid_s
( ElLeftOrRight side, ElUpperOrLower uplo,
  ElConstMatrix_s d, ElMatrix_s X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoid_d
( ElLeftOrRight side, ElUpperOrLower uplo,
  ElConstMatrix_d d, ElMatrix_d X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoid_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_c d, ElMatrix_c X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoid_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_z d, ElMatrix_z X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDist_i
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMatrix_i d, ElDistMatrix_i X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDist_s
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMatrix_s d, ElDistMatrix_s X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDist_d
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMatrix_d d, ElDistMatrix_d X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDist_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_c d, ElDistMatrix_c X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDist_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_z d, ElDistMatrix_z X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidSparse_i
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstMatrix_i d, ElSparseMatrix_i X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidSparse_s
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstMatrix_s d, ElSparseMatrix_s X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidSparse_d
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstMatrix_d d, ElSparseMatrix_d X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidSparse_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_c d, ElSparseMatrix_c X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidSparse_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_z d, ElSparseMatrix_z X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDistSparse_i
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMultiVec_i d, ElDistSparseMatrix_i X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDistSparse_s
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMultiVec_s d, ElDistSparseMatrix_s X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDistSparse_d
( ElLeftOrRight side, ElUpperOrLower uplo, 
  ElConstDistMultiVec_d d, ElDistSparseMatrix_d X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDistSparse_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMultiVec_c d, ElDistSparseMatrix_c X, ElInt offset );
EL_EXPORT ElError ElDiagonalScaleTrapezoidDistSparse_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMultiVec_z d, ElDistSparseMatrix_z X, ElInt offset );
/* DiagonalSolve 
   ============= */
EL_EXPORT ElError ElDiagonalSolve_s
( ElLeftOrRight side, 
  ElConstMatrix_s d, ElMatrix_s X );
EL_EXPORT ElError ElDiagonalSolve_d
( ElLeftOrRight side, 
  ElConstMatrix_d d, ElMatrix_d X );
EL_EXPORT ElError ElDiagonalSolve_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElMatrix_c X );
EL_EXPORT ElError ElDiagonalSolve_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElMatrix_z X );
EL_EXPORT ElError ElDiagonalSolveDist_s
( ElLeftOrRight side,
  ElConstDistMatrix_s d, ElDistMatrix_s X );
EL_EXPORT ElError ElDiagonalSolveDist_d
( ElLeftOrRight side, 
  ElConstDistMatrix_d d, ElDistMatrix_d X );
EL_EXPORT ElError ElDiagonalSolveDist_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_c d, ElDistMatrix_c X );
EL_EXPORT ElError ElDiagonalSolveDist_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_z d, ElDistMatrix_z X );
EL_EXPORT ElError ElDiagonalSolveSparse_s
( ElLeftOrRight side,
  ElConstMatrix_s d, ElSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalSolveSparse_d
( ElLeftOrRight side, 
  ElConstMatrix_d d, ElSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalSolveSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c d, ElSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalSolveSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z d, ElSparseMatrix_z X );
EL_EXPORT ElError ElDiagonalSolveDistSparse_s
( ElLeftOrRight side,
  ElConstDistMultiVec_s d, ElDistSparseMatrix_s X );
EL_EXPORT ElError ElDiagonalSolveDistSparse_d
( ElLeftOrRight side, 
  ElConstDistMultiVec_d d, ElDistSparseMatrix_d X );
EL_EXPORT ElError ElDiagonalSolveDistSparse_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_c d, ElDistSparseMatrix_c X );
EL_EXPORT ElError ElDiagonalSolveDistSparse_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMultiVec_z d, ElDistSparseMatrix_z X );
/* Dot 
   === */
EL_EXPORT ElError ElDot_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElInt* prod );
EL_EXPORT ElError ElDot_s
( ElConstMatrix_s A, ElConstMatrix_s B, float* prod );
EL_EXPORT ElError ElDot_d
( ElConstMatrix_d A, ElConstMatrix_d B, double* prod );
EL_EXPORT ElError ElDot_c
( ElConstMatrix_c A, ElConstMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElDot_z
( ElConstMatrix_z A, ElConstMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElDotDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElInt* prod );
EL_EXPORT ElError ElDotDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, float* prod );
EL_EXPORT ElError ElDotDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, double* prod );
EL_EXPORT ElError ElDotDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElDotDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElDotDistMultiVec_i
( ElConstDistMultiVec_i A, ElConstDistMultiVec_i B, ElInt* prod );
EL_EXPORT ElError ElDotDistMultiVec_s
( ElConstDistMultiVec_s A, ElConstDistMultiVec_s B, float* prod );
EL_EXPORT ElError ElDotDistMultiVec_d
( ElConstDistMultiVec_d A, ElConstDistMultiVec_d B, double* prod );
EL_EXPORT ElError ElDotDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, complex_float* prod );
EL_EXPORT ElError ElDotDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, complex_double* prod );
/* Dotu
   ==== */
EL_EXPORT ElError ElDotu_c
( ElConstMatrix_c A, ElConstMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElDotu_z
( ElConstMatrix_z A, ElConstMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElDotuDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElDotuDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElDotuDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, complex_float* prod );
EL_EXPORT ElError ElDotuDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, complex_double* prod );