python/blas_like/level1.py


def DiagonalScale(side,orient,d,A):
  if d.tag != A.tag: raise Exception('Matrix datatypes must match')
  args = [side,d.obj,A.obj]
  argsCpx = [side,orient,d.obj,A.obj]
  if type(A) is Matrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == iTag: lib.ElDiagonalScale_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScale_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScale_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScale_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScale_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(d) is not DistMatrix:
      raise Exception('Expected d to be a DistMatrix')
    if   A.tag == iTag: lib.ElDiagonalScaleDist_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleDist_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleDist_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleDist_z(*argsCpx)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == iTag: lib.ElDiagonalScaleSparse_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleSparse_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if type(d) is not DistMultiVec:
      raise Exception('Expected d to be a DistMultiVec')
    if   A.tag == iTag: lib.ElDiagonalScaleDistSparse_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleDistSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleDistSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleDistSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleDistSparse_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if type(d) is not DistMultiVec:
      raise Exception('Expected d to be a DistMultiVec')
    if   A.tag == iTag: lib.ElDiagonalScaleDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleDistMultiVec_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleDistMultiVec_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

# Diagonal scale trapezoid
# ------------------------
lib.ElDiagonalScaleTrapezoid_i.argtypes = \
lib.ElDiagonalScaleTrapezoid_s.argtypes = \
lib.ElDiagonalScaleTrapezoid_d.argtypes = \
lib.ElDiagonalScaleTrapezoidDist_i.argtypes = \
lib.ElDiagonalScaleTrapezoidDist_s.argtypes = \
lib.ElDiagonalScaleTrapezoidDist_d.argtypes = \
lib.ElDiagonalScaleTrapezoidSparse_i.argtypes = \
lib.ElDiagonalScaleTrapezoidSparse_s.argtypes = \
lib.ElDiagonalScaleTrapezoidSparse_d.argtypes = \
lib.ElDiagonalScaleTrapezoidDistSparse_i.argtypes = \
lib.ElDiagonalScaleTrapezoidDistSparse_s.argtypes = \
lib.ElDiagonalScaleTrapezoidDistSparse_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,iType]

lib.ElDiagonalScaleTrapezoid_c.argtypes = \
lib.ElDiagonalScaleTrapezoid_z.argtypes = \
lib.ElDiagonalScaleTrapezoidDist_c.argtypes = \
lib.ElDiagonalScaleTrapezoidDist_z.argtypes = \
lib.ElDiagonalScaleTrapezoidSparse_c.argtypes = \
lib.ElDiagonalScaleTrapezoidSparse_z.argtypes = \
lib.ElDiagonalScaleTrapezoidDistSparse_c.argtypes = \
lib.ElDiagonalScaleTrapezoidDistSparse_z.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,iType]

def DiagonalScaleTrapezoid(side,uplo,orient,d,A,offset=0):
  if d.tag != A.tag: raise Exception('Matrix datatypes must match')
  args = [side,uplo,d.obj,A.obj,offset]
  argsCpx = [side,uplo,orient,d.obj,A.obj,offset]
  if type(A) is Matrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == iTag: lib.ElDiagonalScaleTrapezoid_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleTrapezoid_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleTrapezoid_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleTrapezoid_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleTrapezoid_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(d) is not DistMatrix:
      raise Exception('Expected d to be a DistMatrix')
    if   A.tag == iTag: lib.ElDiagonalScaleTrapezoidDist_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleTrapezoidDist_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleTrapezoidDist_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleTrapezoidDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleTrapezoidDist_z(*argsCpx)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == iTag: lib.ElDiagonalScaleTrapezoidSparse_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleTrapezoidSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleTrapezoidSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleTrapezoidSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleTrapezoidSparse_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if type(d) is not DistMultiVec:
      raise Exception('Expected d to be a DistMultiVec')
    if   A.tag == iTag: lib.ElDiagonalScaleTrapezoidDistSparse_i(*args)
    elif A.tag == sTag: lib.ElDiagonalScaleTrapezoidDistSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalScaleTrapezoidDistSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalScaleTrapezoidDistSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalScaleTrapezoidDistSparse_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

# Diagonal solve
# --------------
lib.ElDiagonalSolve_s.argtypes = \
lib.ElDiagonalSolve_d.argtypes = \
lib.ElDiagonalSolveDist_s.argtypes = \
lib.ElDiagonalSolveDist_d.argtypes = \
lib.ElDiagonalSolveSparse_s.argtypes = \
lib.ElDiagonalSolveSparse_d.argtypes = \
lib.ElDiagonalSolveDistSparse_s.argtypes = \
lib.ElDiagonalSolveDistSparse_d.argtypes = \
lib.ElDiagonalSolveDistMultiVec_s.argtypes = \
lib.ElDiagonalSolveDistMultiVec_d.argtypes = \
  [c_uint,c_void_p,c_void_p]

lib.ElDiagonalSolve_c.argtypes = \
lib.ElDiagonalSolve_z.argtypes = \
lib.ElDiagonalSolveDist_c.argtypes = \
lib.ElDiagonalSolveDist_z.argtypes = \
lib.ElDiagonalSolveSparse_c.argtypes = \
lib.ElDiagonalSolveSparse_z.argtypes = \
lib.ElDiagonalSolveDistSparse_c.argtypes = \
lib.ElDiagonalSolveDistSparse_z.argtypes = \
lib.ElDiagonalSolveDistMultiVec_c.argtypes = \
lib.ElDiagonalSolveDistMultiVec_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p]

def DiagonalSolve(side,orient,d,A):
  if d.tag != A.tag: raise Exception('Matrix datatypes must match')
  args = [side,d.obj,A.obj]
  argsCpx = [side,orient,d.obj,A.obj]
  if type(A) is Matrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == sTag: lib.ElDiagonalSolve_s(*args)
    elif A.tag == dTag: lib.ElDiagonalSolve_d(*args)
    elif A.tag == cTag: lib.ElDiagonalSolve_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalSolve_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(d) is not DistMatrix:
      raise Exception('Expected d to be a DistMatrix')
    if   A.tag == sTag: lib.ElDiagonalSolveDist_s(*args)
    elif A.tag == dTag: lib.ElDiagonalSolveDist_d(*args)
    elif A.tag == cTag: lib.ElDiagonalSolveDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalSolveDist_z(*argsCpx)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if type(d) is not Matrix:
      raise Exception('Expected d to be a Matrix')
    if   A.tag == sTag: lib.ElDiagonalSolveSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalSolveSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalSolveSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalSolveSparse_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if type(d) is not DistMultiVec:
      raise Exception('Expected d to be a DistMultiVec')
    if   A.tag == sTag: lib.ElDiagonalSolveDistSparse_s(*args)
    elif A.tag == dTag: lib.ElDiagonalSolveDistSparse_d(*args)
    elif A.tag == cTag: lib.ElDiagonalSolveDistSparse_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalSolveDistSparse_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if type(d) is not DistMultiVec:
      raise Exception('Expected d to be a DistMultiVec')
    if   A.tag == sTag: lib.ElDiagonalSolveDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElDiagonalSolveDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElDiagonalSolveDistMultiVec_c(*argsCpx)
    elif A.tag == zTag: lib.ElDiagonalSolveDistMultiVec_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

# Dot
# ---
lib.ElDot_i.argtypes = \
lib.ElDotDist_i.argtypes = \
lib.ElDotDistMultiVec_i.argtypes = \
  [c_void_p,c_void_p,POINTER(iType)]

lib.ElDot_s.argtypes = \
lib.ElDotDist_s.argtypes = \
lib.ElDotDistMultiVec_s.argtypes = \
  [c_void_p,c_void_p,POINTER(sType)]

lib.ElDot_d.argtypes = \
lib.ElDotDist_d.argtypes = \
lib.ElDotDistMultiVec_d.argtypes = \
  [c_void_p,c_void_p,POINTER(dType)]

lib.ElDot_c.argtypes = \
lib.ElDotDist_c.argtypes = \
lib.ElDotDistMultiVec_c.argtypes = \
  [c_void_p,c_void_p,POINTER(cType)]

lib.ElDot_z.argtypes = \
lib.ElDotDist_z.argtypes = \
lib.ElDotDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p,POINTER(zType)]

def Dot(A,B):
  if type(A) is not type(B): raise Exception('Types of A and B must match')
  if A.tag != B.tag: raise Exception('Datatypes of A and B must match')
  prod = TagToType(A.tag)()
  args = [A.obj,B.obj,pointer(prod)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElDot_i(*args) 
    elif A.tag == sTag: lib.ElDot_s(*args)
    elif A.tag == dTag: lib.ElDot_d(*args)
    elif A.tag == cTag: lib.ElDot_c(*args)
    elif A.tag == zTag: lib.ElDot_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElDotDist_i(*args) 
    elif A.tag == sTag: lib.ElDotDist_s(*args)
    elif A.tag == dTag: lib.ElDotDist_d(*args)
    elif A.tag == cTag: lib.ElDotDist_c(*args)
    elif A.tag == zTag: lib.ElDotDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElDotDistMultiVec_i(*args) 
    elif A.tag == sTag: lib.ElDotDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElDotDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElDotDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElDotDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()
  return ScalarData(prod)

# Dotu
# ----
lib.ElDot_c.argtypes = \
lib.ElDotDist_c.argtypes = \
lib.ElDotDistMultiVec_c.argtypes = \
  [c_void_p,c_void_p,POINTER(cType)]

lib.ElDot_z.argtypes = \
lib.ElDotDist_z.argtypes = \
lib.ElDotDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p,POINTER(zType)]

def Dotu(A,B):
  if type(A) is not type(B): raise Exception('Types of A and B must match')
  if A.tag != B.tag: raise Exception('Datatypes of A and B must match')
  prod = TagToType(A.tag)()
  args = [A.obj,B.obj,pointer(prod)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElDot_i(*args) 
    elif A.tag == sTag: lib.ElDot_s(*args)
    elif A.tag == dTag: lib.ElDot_d(*args)
    elif A.tag == cTag: lib.ElDotu_c(*args)
    elif A.tag == zTag: lib.ElDotu_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElDotDist_i(*args) 
    elif A.tag == sTag: lib.ElDotDist_s(*args)
    elif A.tag == dTag: lib.ElDotDist_d(*args)
    elif A.tag == cTag: lib.ElDotuDist_c(*args)
    elif A.tag == zTag: lib.ElDotuDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElDotDistMultiVec_i(*args) 
    elif A.tag == sTag: lib.ElDotDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElDotDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElDotuDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElDotuDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()
  return ScalarData(prod)
